# Spec-Driven-Development

./: .gitignore  .npmignore  README.md  prompt.txt  prompt1.txt  prompt2.txt
.claude/: settings.local.json
Physical-AI-and-Humanoid-Robotics/: .eslintrc.js  .gitignore  .npmignore  (+6 more)
backend/: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
backend/agents/: chat_agent.py  response_tool.py  retrieval_tool.py
backend/deployment/: DEPLOYMENT.md  docker-compose.yml  k8s-deployment.yaml  nginx.conf
backend/docs/: api.md
backend/models/: citation.py  context.py  message.py  query.py  response.py  session.py
backend/response_generation/: .gitignore  README.md  config.py  debug_test.py  main.py  pyproject.toml  requirements.txt  test_api.py  test_basic.py
backend/response_generation/agents/: __init__.py  openrouter_provider_adapter.py  rag_answer_agent.py
backend/response_generation/models/: __init__.py  agent_models.py
backend/response_generation/utils/: __init__.py  context_utils.py  exceptions.py  logging_utils.py  text_utils.py
backend/retrieval/: README.md  main.py  test_retrieval.py
backend/scripts/: prepare-deployment.sh  run_tests.py  scrape_detailed.py  scrape_website.py  simple_scrape.py
backend/services/: cache_service.py  cohere_service.py  conversation_manager.py  health_service.py  integration.py  monitoring.py  qdrant_service.py  response_service.py
backend/tests/: conftest.py  requirements.txt
backend/tests/integration/: test_api_integration.py  test_final_integration.py  test_rag_flow.py
backend/tests/performance/: test_performance.py
backend/tests/unit/: test_agents.py  test_main.py  test_models.py  test_services.py
backend/tests/validation/: context_retrieval_validator.py  test_context_retrieval_success.py
backend/utils/: error_handler.py
(+248 files in other folders)
